# monster-siren-puller

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  Readme.md  t
src/: album_detail.rs  albums.rs  download.rs  download_interface.rs  lib.rs  main.rs  request.rs  song.rs  song_index.rs
src/cmds/: album.rs  clap.rs  mod.rs  root.rs  try_or_eprintln.rs
src/download/: build_info.rs  dl.rs  info.rs  interface.rs  mod.rs  task.rs
src/download3/: build_info.rs  config.rs  downloading.rs  mod.rs  padding.rs
src/download_task/: downlod.rs  get.rs  mod.rs  write.rs
src/types/: album_detail.rs  albums.rs  mod.rs  response.rs  song.rs  song_index.rs
