[package]
name = "monster-siren-puller"
version = "0.1.0"
edition = "2021"
authors = ["Pizero <zhaory200707@outlook.com>"]
description = "A Moster Siren music downloader"
readme = "Readme.md"
repository = "https://jihulab.com/pizero-tools/monster-siren-puller"
license-file = "LICENSE"
keywords = ["mucic_download", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
futures = "0.3.28"
# indicatif = "0.17.6"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
# serde_derive = "1.0.160"
serde_json = "1.0.96"

[dependencies.tokio]
version = "1.28.0"
features = ["rt-multi-thread", "tokio-macros", "macros"]

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Optimize for binary size
strip = true # Remove debug symbols
